Javascript loop Commit

--- a/full javascript/.vscode/settings.json
+++ b/full javascript/.vscode/settings.json
@@ -4,6 +4,10 @@
         "Kolkata",
         "mult",
         "Nums",
-        "Sahoo"
+        "Sahoo",
+        "Swaroop",
+        "Swarup",
+        "Verain",
+        "Virendra"
     ]
 }
